name:                mst
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cassaundra/mst
license:             MIT
license-file:        LICENSE
author:              Cassaundra Smith
maintainer:          cass@cassaundra.io
copyright:           2021 Cassaundra Smith
category:            Graphs
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , graphite
                     , hashable >= 1.3.0.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cassaundra/mst
